# coil

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  clang-format-all.ps1  coil.natvis  launch.vs.json
.github/workflows/: cmake.yml  ubuntu.yml  windows.yml
coil/: CMakeLists.txt  Coil.cpp
coil/include/coil/: AnyArgView.h  ArgValue.h  Bind.h  BindingProxy.h  Bindings.h  Coil.h  CommandCollection.h  CommandListener.h  Context.h  Converter.h  DefaultLexer.h  ExecutionInput.h  ExecutionResult.h  Expected.h  Extern.h  GeneralizedString.h  NamedArgs.h  Overloaded.h  Property.h  TypeName.h  TypeSerializer.h  Types.h  Utils.h  Variable.h  VariadicArg.h  VariadicConsumer.h
coil/include/coil/detail/: AnyFunctor.h  ArgumentTraits.h  CallContext.h  Converter.h  FuncTraits.h  FuncTraitsEx.h  FunctionWrapper.h  FunctorCaller.h  StringWrapper.h
coil/include/coil/utils/: ElementSelector.h  FilterTypes.h  FuncTraits.h  MemberFunctionFunctor.h  TrueIndices.h  TypeId.h  TypeListTraits.h  Types.h  Utils.h  VariableWrapper.h
coil/src/: Bindings.cpp  Coil.cpp  CommandListener.cpp  Extern.cpp  Utils.cpp  demo.cpp
examples/: CMakeLists.txt  CustomTypeName.h  EnumToString.h  LexerTests.cpp  README.md  SimpleLexer.cpp  SimpleLexer.h  main.cpp  main_tmp.cpp
examples/advanced/: AdvancedExample.cpp  AdvancedExample.h
examples/basic/: BasicExample.cpp  BasicExample.h  EnumToString.h  Test.cpp
examples/basic_example/: BasicExample.cpp  BasicExample.h  Test.cpp
examples/common/: CustomTypeName.h  EnumSupport.h  EnumToString.h  EnumTypeSerializer.h  ExamplesCommon.cpp  ExamplesCommon.h  FlagVariableWrapper.h  Utils.h
examples/compound/: CompoundExample.cpp  CompoundExample.h
examples/dev/: CMakeLists.txt  EnumToString.h  SimpleLexer.cpp  SimpleLexer.h  main.cpp
examples/dev/tests/: Test.cpp  Test.h
examples/encapsulation/: EncapsulationExample.cpp  EncapsulationExample.h
examples/enums/: EnumsExample.cpp  EnumsExample.h
examples/errors/: ErrorsExample.cpp  ErrorsExample.h
examples/flags/: FlagsExample.cpp  FlagsExample.h
examples/named/: NamedExample.cpp  NamedExample.h
examples/overloading/: OverloadingExample.cpp  OverloadingExample.h
examples/properties/: PropertiesExample.cpp  PropertiesExample.h
examples/temp/: LexerTests.cpp  LexerTests.h  Test.cpp  Test.h
examples/usertypes/: UsertypesExample.cpp  UsertypesExample.h
examples/variables/: VariablesExample.cpp  VariablesExample.h
examples/variadic/: VariadicExample.cpp  VariadicExample.h
include/coil/: AnyArgView.h  AnyFunctor.h  Assert.h  Bind.h  Bindings.h  Buffer.h  Coil.h  CoilFwd.h  CommandCollection.h  Config.h  Context.h  DefaultLexer.h  ExecutionInput.h  ExecutionResult.h  Expected.h  Extern.h  Hash.h  Lexer.h  NamedArgs.h  Optional.h  Overloaded.h  Property.h  StdLibCompat.h  String.h  StringView.h  TypeName.h  TypeSerializer.h  Types.h  Unexpected.h  UniquePtr.h  UnorderedMap.h  Utils.h  Value.h  Variable.h  Vector.h
include/coil/detail/: Algorithm.h  AnyFunctor.h  Bind.h  Bindings.h  Buffer.h  CallContext.h  Config.h  Context.h  ExecutionInput.h  ExecutionResult.h  Expected.h  Extern.h  FuncTraits.h  FunctionWrapper.h  Functional.h  FunctorCaller.h  Hash.h  NamedArgs.h  New.h  Optional.h  Overloaded.h  Property.h  Sequence.h  StdLib.h  StrToX.h  String.h  StringConv.h  StringView.h  StringWrapper.h  TypeName.h  TypeSerializer.h  TypeTraits.h  Types.h  Unexpected.h  UniquePtr.h  UnorderedMap.h  Utility.h  Value.h  Variable.h  Vector.h
scripts/: run-clang-format.ps1  run-codecov.ps1  run-compilation-test.ps1
scripts/generate_classes/: CMakeLists.txt.template  Class.cpp.template  Class.h.template  generate_classes.py
scripts/test_compilation/: analyze.ps1  full-once.json  full.json  merge-trace.py  minimal-coil.json  minimal-none.json  parse-symbols.py  print-trace-stats.py  run-clang.ps1  run.ps1  run.py  settings.json
scripts/test_compilation/result/: full-build-stats.json  output.meta.json
scripts/test_compilation/results/: report.json
src/: Buffer.cpp  Coil.cpp  DefaultLexer.cpp  New.cpp  StdLib.cpp  StdLibCompat.cpp  StrToX.cpp  String.cpp  StringConv.cpp  StringView.cpp
tests/cmake_tests/: CMakeLists.txt
tests/cmake_tests/compilation/: Common.h  (+9 more)
tests/cmake_tests/runtime/: BindingsTests.cpp  CMakeLists.txt  Common.h  ExpectedTests.cpp  LexerTests.cpp  PropertyTests.cpp  TypeSerializerTests.cpp  main.cpp
tests/compilation/: CMakeLists.txt  Common.h  DirectVariableAssignment.cpp  MemberVariableOnVoid.cpp  Valid.cpp  run.ps1
tests/compilation_performance/: ByReference.cpp  ByValue.cpp  CMakeLists.txt  Common.cpp  Common.h  ObjectByValue.cpp  pch.h
tests/compilation_performance/scripts/generate_classes/: Class.h.template  generate_classes.py
tests/compilation_performance/scripts/run/: full-once.json  full.json  minimal-coil.json  minimal-none.json  run.py
tests/compilation_performance/scripts/run/results/CLANG-COIL-Unity/: report.json
tests/compilation_performance/scripts/run/results/CLANG-MANUAL/: report.json
tests/compilation_performance/scripts/run/results/CLANG-MANUAL-Unity/: report.json  symbols.txt
tests/compilation_performance/scripts/run/results/CLANG-NONE/: report.json  symbols.txt
tests/compilation_performance/scripts/run/results/CLANG-NONE-Unity/: symbols.txt
tests/compilation_performance/scripts/run/results/MSVC-COIL/: report.json
tests/compilation_performance/scripts/run/results/MSVC-COIL-Unity/: report.json
tests/compilation_performance/scripts/run/results/MSVC-MANUAL/: report.json
tests/compilation_performance/scripts/run/results/MSVC-MANUAL-Unity/: symbols.txt
tests/compilation_performance/scripts/run/results/MSVC-NONE-Unity/: report.json  symbols.txt
tests/liblua/: CMakeLists.txt
tests/runtime/: BindingsTests.cpp  BufferTests.cpp  CMakeLists.txt  Common.h  ExpectedTests.cpp  LexerTests.cpp  OptionalTests.cpp  PropertyTests.cpp  StringConvTests.cpp  StringTests.cpp  TypeSerializerTests.cpp  UniquePtrTests.cpp  UnorderedMapTests.cpp  VectorTests.cpp
tests/runtime_performance/: CMakeLists.txt  main.cpp
(+24 files in other folders)
